// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizer should skip comment at the end of the line 1`] = `
Array [
  Object {
    "range": Object {
      "from": 0,
      "to": 4,
    },
    "raw": "done",
    "type": "Unknown",
    "value": "DONE",
  },
  Object {
    "range": Object {
      "from": 4,
      "to": 5,
    },
    "raw": ":",
    "type": "Colon",
    "value": ":",
  },
  Object {
    "range": Object {
      "from": 25,
      "to": 28,
    },
    "raw": "end",
    "type": "Unknown",
    "value": "END",
  },
]
`;

exports[`tokenizer should skip line with comment 1`] = `
Array [
  Object {
    "range": Object {
      "from": 20,
      "to": 23,
    },
    "raw": "end",
    "type": "Unknown",
    "value": "END",
  },
]
`;

exports[`tokenizer should skip whitespace 1`] = `
Array [
  Object {
    "range": Object {
      "from": 3,
      "to": 7,
    },
    "raw": "done",
    "type": "Unknown",
    "value": "DONE",
  },
  Object {
    "range": Object {
      "from": 7,
      "to": 8,
    },
    "raw": ":",
    "type": "Colon",
    "value": ":",
  },
  Object {
    "range": Object {
      "from": 11,
      "to": 14,
    },
    "raw": "end",
    "type": "Unknown",
    "value": "END",
  },
]
`;

exports[`tokenizer should tokenize address 1`] = `
Array [
  Object {
    "range": Object {
      "from": 0,
      "to": 2,
    },
    "raw": "[]",
    "type": "Address",
    "value": "",
  },
  Object {
    "range": Object {
      "from": 3,
      "to": 7,
    },
    "raw": "[00]",
    "type": "Address",
    "value": "00",
  },
  Object {
    "range": Object {
      "from": 8,
      "to": 12,
    },
    "raw": "[al]",
    "type": "Address",
    "value": "AL",
  },
]
`;

exports[`tokenizer should tokenize comma 1`] = `
Array [
  Object {
    "range": Object {
      "from": 0,
      "to": 1,
    },
    "raw": ",",
    "type": "Comma",
    "value": ",",
  },
  Object {
    "range": Object {
      "from": 2,
      "to": 3,
    },
    "raw": ",",
    "type": "Comma",
    "value": ",",
  },
  Object {
    "range": Object {
      "from": 3,
      "to": 4,
    },
    "raw": ",",
    "type": "Comma",
    "value": ",",
  },
]
`;

exports[`tokenizer should tokenize digits 1`] = `
Array [
  Object {
    "range": Object {
      "from": 0,
      "to": 1,
    },
    "raw": "0",
    "type": "Digits",
    "value": "0",
  },
  Object {
    "range": Object {
      "from": 2,
      "to": 4,
    },
    "raw": "01",
    "type": "Digits",
    "value": "01",
  },
  Object {
    "range": Object {
      "from": 5,
      "to": 8,
    },
    "raw": "002",
    "type": "Digits",
    "value": "002",
  },
]
`;

exports[`tokenizer should tokenize register 1`] = `
Array [
  Object {
    "range": Object {
      "from": 0,
      "to": 2,
    },
    "raw": "al",
    "type": "Register",
    "value": "AL",
  },
  Object {
    "range": Object {
      "from": 3,
      "to": 5,
    },
    "raw": "Bl",
    "type": "Register",
    "value": "BL",
  },
  Object {
    "range": Object {
      "from": 6,
      "to": 8,
    },
    "raw": "cL",
    "type": "Register",
    "value": "CL",
  },
  Object {
    "range": Object {
      "from": 9,
      "to": 11,
    },
    "raw": "DL",
    "type": "Register",
    "value": "DL",
  },
]
`;

exports[`tokenizer should tokenize string 1`] = `
Array [
  Object {
    "range": Object {
      "from": 0,
      "to": 2,
    },
    "raw": "\\"\\"",
    "type": "String",
    "value": "",
  },
  Object {
    "range": Object {
      "from": 3,
      "to": 21,
    },
    "raw": "\\"this is a string\\"",
    "type": "String",
    "value": "this is a string",
  },
]
`;
